[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/duck_food.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -50.0
linear_accel_random = 1.0
damping = 100.0
damping_random = 1.0
scale = 0.5

[sub_resource type="CircleShape2D" id=1]
radius = 175.011

[sub_resource type="CircleShape2D" id=3]
radius = 59.0762

[node name="duck_food" type="RigidBody2D"]
mode = 3
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.803922, 0.607843, 0.152941, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0.803922, 0.607843, 0, 1 )
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 32
lifetime = 20.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="travel_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radius"]
shape = SubResource( 1 )
disabled = true

[node name="hapyRadius" type="Area2D" parent="."]

[node name="happyShape" type="CollisionShape2D" parent="hapyRadius"]
shape = SubResource( 3 )
disabled = true

[connection signal="timeout" from="travel_timer" to="." method="_on_travel_timer_timeout"]
[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
[connection signal="body_entered" from="hapyRadius" to="." method="_on_hapyRadius_body_entered"]
